navbar section done

--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
     <button class="cp2 bg-[#00A63E] text-[white] font-semibold py-2 px-3 rounded-[40px] text-[16px]"><span> 2</span> Copy</button>
     </div>
    </section>               
-  
+   <!-- banner section -->
+    <section class="banner mx-auto text-center flex flex-col items-center gap-4  h-[] bg-gradient-to-r from-[#013223] via-[#006747] to-[#013223] py-[20px]">
+          <img src="./assets/logo-dark.png" alt="" class="h-[92px] w-[92px]">  
+           <h2 class="text-[40px] font-bold text-[#ffffff]">Emergency Service Directory</h2>
+           <p class="text-[16px] text-[#ffffff]">Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</p> 
+    </section>
+    
 </body>
 </html>
