--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
 <!-- <link rel="stylesheet" href="./style/styles.css"> -->
 </head>
-<body>
+<body class="bg-[#F5FFF6]">
     <!-- navber section -->
-   <section class="navber flex justify-between  h-[100px] px-[60px]">
+   <section class="navber flex justify-between bg-[white] h-[100px] px-[60px]">
     <div class="nav-logo flex gap-5 items-center">
         <img src="./assets/logo.png" alt="" class="h-[50px] w-[50px]" >
         <h2 class="text-xl font-bold text-[#006747]">Emergency <br>Service</h2>
@@ -44,7 +44,7 @@
            <p class="text-[16px] text-[#ffffff]">Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</p> 
     </section>
     <!-- service section -->
-     <section class="service bg-[#F5FFF6] flex justify-between max-w-[1440px] mx-auto mt-12 p-[62px] gap-[30px]">
+     <section class="service  flex justify-between max-w-[1440px] mx-auto mt-12 p-[62px] gap-[30px]">
           <!-- card container -->
         <div class="card-container grid grid-cols-3 gap-[30px] w-[1000px]">
             <div class="card w-[] bg-[White] h-[] p-[32px] shadow-lg rounded-[12px]">
@@ -57,10 +57,10 @@
             <p class="text-[16px] text-[Gray] mb-5">National Emergency</p>
         </div>
         <div>
-            <h1 class="text-[32px]  font-bold">999</h1>
-            <p class="text-[18px] text-[gray]  p-4 bg-[#F2F2F2] mb-5  h-[35px] w-[50px] rounded-[20px] ">All</p>
+            <h1 class="text-[32px]  font-bold mt-3">999</h1>
+            <span class="text-[18px] text-[gray]   bg-[#F2F2F2]   px-3 py-2  rounded-[20px] ">All</span>
         </div>
-        <div class="flex justify-around gap-4">
+        <div class="flex justify-around gap-4 mt-5">
             <button class="text-[16px] text-[Gray] p-4 border-2 border-black-300  rounded-[10px]"><i class="fa-solid fa-copy"></i> Copy</button>
             <button class="bg-[#00A63E] text-[white] font-semibold p-4 rounded-[10px] text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
         </div>
@@ -75,10 +75,10 @@
             <p class="text-[16px] text-[Gray] mb-5">Police</p>
         </div>
         <div>
-            <h1 class="text-[32px]  font-bold">999</h1>
-            <p class="text-[18px] text-[gray]  p-4 bg-[#F2F2F2] mb-5  h-[35px] w-[50px] rounded-[20px] ">Police</p>
+            <h1 class="text-[32px]  font-bold mt-3">999</h1>
+            <span class="text-[18px] text-[gray]  p-4 bg-[#F2F2F2] mb-5  px-3 py-2 rounded-[20px] ">Police</span>
         </div>
-        <div class="flex justify-around gap-4">
+        <div class="flex justify-around gap-4 mt-5">
             <button class="text-[16px] text-[Gray] p-4 border-2 border-black-300  rounded-[10px]"><i class="fa-solid fa-copy"></i> Copy</button>
             <button class="bg-[#00A63E] text-[white] font-semibold p-4 rounded-[10px] text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
         </div>
@@ -93,10 +93,10 @@
             <p class="text-[16px] text-[Gray] mb-5">Fire Service</p>
         </div>
         <div>
-            <h1 class="text-[32px]  font-bold">999</h1>
-            <p class="text-[18px] text-[gray]  p-4 bg-[#F2F2F2] mb-5  h-[35px] w-[50px] rounded-[20px] ">Fire</p>
+            <h1 class="text-[32px]  font-bold mt-3">999</h1>
+            <span class="text-[18px] text-[gray]  p-4 bg-[#F2F2F2] mb-5  px-3 py-2 rounded-[20px] ">Fire</span>
         </div>
-        <div class="flex justify-around gap-4 ">
+        <div class="flex justify-around gap-4 mt-5">
             <button class="text-[16px] text-[Gray] p-4 border-2 border-black-300  rounded-[10px]"><i class="fa-solid fa-copy"></i> Copy</button>
             <button class="bg-[#00A63E] text-[white] font-semibold p-4 rounded-[10px] text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
         </div>
@@ -112,9 +112,9 @@
         </div>
         <div>
             <h1 class="text-[32px]  font-bold">1994-999999</h1>
-            <p class="text-[18px] text-[gray]  p-4 bg-[#F2F2F2] mb-5  h-[35px] w-[50px] rounded-[20px] ">Health</p>
+            <span class="text-[18px] text-[gray]  p-4 bg-[#F2F2F2] mb-5  px-3 py-2 rounded-[20px] ">Health</span>
         </div>
-        <div class="flex justify-around gap-4">
+        <div class="flex justify-around gap-4 mt-5">
             <button class="text-[16px] text-[Gray] p-4 border-2 border-black-300  rounded-[10px]"><i class="fa-solid fa-copy"></i> Copy</button>
             <button class="bg-[#00A63E] text-[white] font-semibold p-4 rounded-[10px] text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
         </div>
@@ -130,9 +130,9 @@
         </div>
         <div>
             <h1 class="text-[32px]  font-bold">109</h1>
-            <p class="text-[18px] text-[gray]  p-4 bg-[#F2F2F2] mb-5  h-[35px] w-[50px] rounded-[20px] ">Help</p>
+            <span class="text-[18px] text-[gray]  p-4 bg-[#F2F2F2] mb-5  px-3 py-2 rounded-[20px] ">Help</span>
         </div>
-        <div class="flex justify-around gap-4">
+        <div class="flex justify-around gap-4 mt-5">
             <button class="text-[16px] text-[Gray] p-4 border-2 border-black-300  rounded-[10px]"><i class="fa-solid fa-copy"></i> Copy</button>
             <button class="bg-[#00A63E] text-[white] font-semibold p-4 rounded-[10px] text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
         </div>
@@ -148,9 +148,9 @@
         </div>
         <div>
             <h1 class="text-[32px]  font-bold">106</h1>
-            <p class="text-[18px] text-[gray]  p-4 bg-[#F2F2F2] mb-5  h-[35px] w-[50px] rounded-[20px] ">Govt.</p>
+            <span class="text-[18px] text-[gray]  p-4 bg-[#F2F2F2] mb-5  px-3 py-2 rounded-[20px] ">Govt.</span>
         </div>
-        <div class="flex justify-around gap-4">
+        <div class="flex justify-around gap-4 mt-5">
             <button class="text-[16px] text-[Gray] p-4 border-2 border-black-300  rounded-[10px]"><i class="fa-solid fa-copy"></i> Copy</button>
             <button class="bg-[#00A63E] text-[white] font-semibold p-4 rounded-[10px] text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
         </div>
@@ -166,9 +166,9 @@
         </div>
         <div>
             <h1 class="text-[32px]  font-bold">16216</h1>
-            <p class="text-[18px] text-[gray]  p-4 bg-[#F2F2F2] mb-5  h-[35px] w-[50px] rounded-[20px] ">Electricity</p>
+            <span class="text-[18px] text-[gray]  p-4 bg-[#F2F2F2] mb-5  px-3 py-2 rounded-[20px] ">Electricity</span>
         </div>
-        <div class="flex justify-around gap-4">
+        <div class="flex justify-around gap-4 mt-5">
             <button class="text-[16px] text-[Gray] p-4 border-2 border-black-300  rounded-[10px]"><i class="fa-solid fa-copy"></i> Copy</button>
             <button class="bg-[#00A63E] text-[white] font-semibold p-4 rounded-[10px] text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
         </div>
@@ -184,9 +184,9 @@
         </div>
         <div>
             <h1 class="text-[32px]  font-bold">16445</h1>
-            <p class="text-[18px] text-[gray]  p-4 bg-[#F2F2F2] mb-5  h-[35px] w-[50px] rounded-[20px] ">NGO</p>
+            <span class="text-[18px] text-[gray]  p-4 bg-[#F2F2F2] mb-5  px-3 py-2 rounded-[20px] ">NGO</span>
         </div>
-        <div class="flex justify-around gap-4">
+        <div class="flex justify-around gap-4 mt-5">
             <button class="text-[16px] text-[Gray] p-4 border-2 border-black-300  rounded-[10px]"><i class="fa-solid fa-copy"></i> Copy</button>
             <button class="bg-[#00A63E] text-[white] font-semibold p-4 rounded-[10px] text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
         </div>
@@ -202,9 +202,9 @@
         </div>
         <div>
             <h1 class="text-[32px]  font-bold">163</h1>
-            <p class="text-[18px] text-[gray]  p-4 bg-[#F2F2F2] mb-5  h-[35px] w-[50px] rounded-[20px] ">Travel</p>
+            <span class="text-[18px] text-[gray]  p-4 bg-[#F2F2F2] mb-5  px-3 py-2 rounded-[20px] ">Travel</span>
         </div>
-        <div class="flex justify-around gap-4">
+        <div class="flex justify-around gap-4 mt-5" >
             <button class="text-[16px] text-[Gray] p-4 border-2 border-black-300  rounded-[10px]"><i class="fa-solid fa-copy"></i> Copy</button>
             <button class="bg-[#00A63E] text-[white] font-semibold p-4 rounded-[10px] text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
         </div>
@@ -219,7 +219,7 @@
             <div class="flex  justify-between  ">
                 <div class="flex gap-2 items-center">
                     <i class="fa-solid fa-clock"></i>
-                    <p>Call History</p>
+                    <p class="text-[20px] text-[black] font-semibold">Call History</p>
                 </div>
                 <button class="cp2 bg-[#00A63E] text-[white] font-semibold py-2 px-3 rounded-[40px] text-[16px]"> Clear</button>
             </div>
