--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
 </head>
 <body class="bg-[#F5FFF6]">
     <!-- navber section -->
-   <section class=" my-5  navber flex flex-col my-4 md:flex-row justify-between bg-[white] h-[100px] px-[60px]  ">
-    <div class="nav-logo flex gap-5 items-center">
+   <section class="   navber flex flex-col  md:flex-row justify-between bg-[white] h-[] px-[60px]  ">
+    <div class="nav-logo flex gap-5 items-center mb-4">
         <img src="./assets/logo.png" alt="" class="h-[50px] w-[50px]" >
         <h2 class="text-xl font-bold text-[#006747]">Emergency <br>Service</h2>
     </div>
-    <div class="left-nav flex gap-5 items-center">
+    <div class="left-nav flex gap-5 items-center mb-4">
         <div class="flex gap-2 px-3 py-2 bg-[#41FF6B1A] rounded-[50px]">
             <p class="text-[16px] font-semibold"><span> 0</span></p>
         <img src="./assets/heart.png" alt="" class="h-[30px] w-[30px]">
