--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
            <p class="text-[16px] text-[#ffffff]">Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</p> 
     </section>
     <!-- service section -->
-     <section class=" service  flex flex-col md:flex-row justify-between max-w-[1440px] mx-auto mt-12 p-[62px] gap-[30px] ">
+     <section class=" service  flex flex-col md:flex-row justify-between max-w-[1440px] mx-auto mt-12 px-[40px] gap-[30px] ">
           <!-- card container -->
         <div class="w-full md:w-[1000px] card-container grid grid-cols-1 md:grid-cols-3  gap-[30px]  ">
-            <div class=" card h-[] bg-[White] w-[] p-[32px] shadow-lg rounded-[12px]">
+            <div class="card h-[] bg-[White] w-[] p-[32px] shadow-lg rounded-[12px]">
             <div class="flex justify-between items-center">
                 <div class="p-5 bg-[#FFE3E2] rounded-[12px]"><img src="./assets/emergency.png" alt="" class="h-[32px] w-[32px]"></div>
                 <i class="fa-solid fa-heart"></i>
