--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body class="bg-[#F5FFF6]">
     <!-- navber section -->
-   <section class="   navber flex flex-col  md:flex-row justify-between bg-[white] h-[] px-[60px]  ">
+   <section class="   navber flex flex-col  sm:flex-row  justify-between bg-[white] h-[] px-[60px]  mt-5">
     <div class="nav-logo flex gap-5 items-center mb-4">
         <img src="./assets/logo.png" alt="" class="h-[50px] w-[50px]" >
         <h2 class="text-xl font-bold text-[#006747]">Emergency <br>Service</h2>
@@ -39,7 +39,7 @@
     </div>
    </section>               
    <!-- banner section -->
-    <section class="banner mx-auto text-center flex flex-col items-center gap-4  h-[] bg-gradient-to-r from-[#013223] via-[#006747] to-[#013223] py-[20px] ">
+    <section class="banner mx-auto text-center flex flex-col items-center gap-4  h-[] bg-gradient-to-r from-[#013223] via-[#006747] to-[#013223] py-[20px]  px-4 sm:px-[60px]">
           <img src="./assets/logo-dark.png" alt="" class="h-[92px] w-[92px]">  
            <h2 class="text-[40px] font-bold text-[#ffffff]">Emergency Service Directory</h2>
            <p class="text-[16px] text-[#ffffff]">Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</p> 
@@ -47,7 +47,7 @@
     <!-- service section -->
      <section class=" service  flex flex-col md:flex-row justify-between max-w-[1440px] mx-auto mt-12 px-[40px] gap-[30px] ">
           <!-- card container -->
-        <div class="w-full md:w-[1000px] card-container grid grid-cols-1 md:grid-cols-3  gap-[30px]  ">
+        <div class="w-full md:w-[1000px] card-container grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3  gap-[30px]  ">
             <div class="card h-[] bg-[White] w-[] p-[32px] shadow-lg rounded-[12px]">
             <div class="flex justify-between items-center">
                 <div class="p-5 bg-[#FFE3E2] rounded-[12px]"><img src="./assets/emergency.png" alt="" class="h-[32px] w-[32px]"></div>
@@ -227,4 +227,4 @@
           </div>
      </section>
 </body>
-</html>d
+</html>
