added font family

--- a/index.html
+++ b/index.html
@@ -16,7 +16,20 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <!-- <link rel="stylesheet" href="./style/styles.css"> -->
-
+<style>
+.hf {
+  font-family: "Hind Madurai", sans-serif;
+}
+.if {
+  font-family: "Inter", sans-serif;
+}
+/* *{
+    padding: 0;
+    max-width: 0;
+    box-sizing: border-box;
+    
+} */
+</style>
 <!-- <link rel="stylesheet" href="./style/styles.css"> -->
 </head>
 <body class="bg-[#F5FFF6]">
@@ -24,7 +37,7 @@
    <section class="   navber flex flex-col  sm:flex-row  justify-between bg-[white] h-[] px-[60px]  mt-5">
     <div class="nav-logo flex gap-5 items-center mb-4">
         <img src="./assets/logo.png" alt="" class="h-[50px] w-[50px]" >
-        <h2 class="text-xl font-bold text-[#006747]">Emergency <br>Service</h2>
+        <h2 class="text-xl font-bold hf text-[#006747]">Emergency <br>Service</h2>
     </div>
     <div class="left-nav flex gap-5 items-center mb-4">
         <div class="flex gap-2 px-3 py-2 bg-[#41FF6B1A] rounded-[50px]">
@@ -41,8 +54,8 @@
    <!-- banner section -->
     <section class="banner mx-auto text-center flex flex-col items-center gap-4  h-[] bg-gradient-to-r from-[#013223] via-[#006747] to-[#013223] py-[20px]  px-4 sm:px-[60px]">
           <img src="./assets/logo-dark.png" alt="" class="h-[92px] w-[92px]">  
-           <h2 class="text-[40px] font-bold text-[#ffffff]">Emergency Service Directory</h2>
-           <p class="text-[16px] text-[#ffffff]">Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</p> 
+           <h2 class="text-[40px] hf font-bold text-[#ffffff]">Emergency Service Directory</h2>
+           <p class="text-[16px] if text-[#ffffff]">Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</p> 
     </section>
     <!-- service section -->
      <section class=" service  flex flex-col md:flex-row justify-between max-w-[1440px] mx-auto mt-12 px-[40px] gap-[30px] ">
